fixes for overflow on the projects view

--- a/themes/san-diego/source/styles/_blog.scss
+++ b/themes/san-diego/source/styles/_blog.scss
@@ -70,6 +70,7 @@
 			z-index: 1;
 			box-sizing: border-box;
 			width: 100%;
+			overflow: hidden;
 		}
 
 		.mobile-tabs {
